<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobintum.calculadora.FullscreenActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:gravity="right"
            android:textSize="@dimen/font_title"
            android:paddingRight="@dimen/padding_small"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:id="@+id/textResult"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/ac"
            android:id="@+id/btnAC"
            android:background="@color/gray"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/less_more"
            android:id="@+id/btnLessMore"
            android:background="@color/gray"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/percent"
            android:id="@+id/btnPercent"
            android:background="@color/gray"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/division"
            android:id="@+id/btnDivision"
            android:background="@color/blue_accent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/seven"
            android:id="@+id/btnSeven"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/eight"
            android:id="@+id/btnEight"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/nine"
            android:id="@+id/btnNine"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/multiply"
            android:id="@+id/btnMultiply"
            android:background="@color/blue_accent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/four"
            android:id="@+id/btnFour"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/five"
            android:id="@+id/btnFive"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/six"
            android:id="@+id/btnSix"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/less"
            android:id="@+id/btnLess"
            android:background="@color/blue_accent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/one"
            android:id="@+id/btnOne"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/two"
            android:id="@+id/btnTwo"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/three"
            android:id="@+id/btnThree"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:background="@color/blue_accent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="@dimen/font_medium"
            android:text="@string/zero"
            android:id="@+id/btnZero"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/dot"
            android:id="@+id/btnDot"
            android:background="@color/blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/font_medium"
            android:text="@string/equal"
            android:id="@+id/btnEqual"
            android:background="@color/blue_accent"/>

    </LinearLayout>


</LinearLayout>
